--- a/app/views/pages/x.html.erb
+++ b/app/views/pages/x.html.erb
@@ -1,1 +1,10 @@
-<h1>Victor Jimenez Gaxiola</h1>
+	<h1>Victor Jimenez Gaxiola</h1>
+
+	<%= params %>
+
+	<form method="">
+		Nombre: <input type="text" name="name"><br />
+		E-mail: <input type="text" name="mail"><br />
+		Edad: <input type="number" name="age"><br />
+		<input type="submit" name="Enviar">
+	</form>
