--- a/app/views/pages/x.html.erb
+++ b/app/views/pages/x.html.erb
@@ -2,9 +2,12 @@
 
 	<%= params %>
 
-	<form method="">
+	<form action="<%= pages_guardar_path %>" method="POST">
 		Nombre: <input type="text" name="name"><br />
 		E-mail: <input type="text" name="mail"><br />
 		Edad: <input type="number" name="age"><br />
 		<input type="submit" name="Enviar">
+		<%= hidden_field_tag :authenticity_token,form_authenticity_token%>
 	</form>
+
+	<p class="alert alert-success"> <%= flash[:notice] %> </p>
